After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782048 - search: don't leak container
search: don't leak container
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Search
unspecified
Other All
: Normal normal
: ---
Assigned To: Cosimo Cecchi
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-02 06:31 UTC by Mohammed Sadiq
Modified: 2017-05-02 10:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
search: don't leak container (711 bytes, patch)
2017-05-02 06:31 UTC, Mohammed Sadiq
none Details | Review
search: Fix leak (799 bytes, patch)
2017-05-02 10:31 UTC, Mohammed Sadiq
none Details | Review
search: Fix memory leak (806 bytes, patch)
2017-05-02 10:32 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2017-05-02 06:31:21 UTC
.
Comment 1 Mohammed Sadiq 2017-05-02 06:31:29 UTC
Created attachment 350845 [details] [review]
search: don't leak container
Comment 2 Bastien Nocera 2017-05-02 09:14:54 UTC
Review of attachment 350845 [details] [review]:

The commit message is a bit on the unclear side. I was expecting a GtkContainer being leaked.
Comment 3 Mohammed Sadiq 2017-05-02 10:31:14 UTC
Created attachment 350857 [details] [review]
search: Fix leak

g_variant_get_strv returns a newly allocated memory.
This should be freed when no longer required.
Comment 4 Mohammed Sadiq 2017-05-02 10:32:06 UTC
Created attachment 350858 [details] [review]
search: Fix memory leak

g_variant_get_strv returns a newly allocated memory.
This should be freed when no longer required.
Comment 5 Bastien Nocera 2017-05-02 10:34:29 UTC
Review of attachment 350858 [details] [review]:

> g_variant_get_strv returns a newly allocated memory

g_variant_get_strv() returns newly allocated memory.

Looks good otherwise!
Comment 6 Bastien Nocera 2017-05-02 10:56:43 UTC
Attachment 350858 [details] pushed as a09a5d7 - search: Fix memory leak