search: Fix memory leak

g_variant_get_strv() returns newly allocated memory.
This should be freed when no longer required.

https://bugzilla.gnome.org/show_bug.cgi?id=782048